update reset css file

--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -94,6 +94,7 @@ video {
   line-height: inherit;
   font-family: inherit;
   vertical-align: baseline;
+  text-decoration: none;
 }
 
 /* HTML5 display-role reset for older browsers */
