--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -54,9 +54,7 @@
       color: $color-secondary;
       font-size: 12px;
 
-      &:hover {
-        color: $color-primary;
-      }
+      @include hover(color, $color-primary);
 
       @include on-tablet {
         padding: 40px 0;
@@ -73,9 +71,16 @@
       line-height: normal;
       color: $color-secondary;
 
-      &:hover {
-        color: $color-primary;
+      .footer__back-to-top-link {
+        display: flex;
+        align-items: center;
+        gap: 16px;
+        color: inherit;
+        text-decoration: none;
+
+        @include hover(color, $color-primary);
       }
+
       .ico-up {
         height: 32px;
         width: 32px;
@@ -83,9 +88,7 @@
         background-repeat: no-repeat;
         background-position: center;
 
-        &:hover {
-          border: 1px solid $color-primary;
-        }
+        @include hover(border-color, $color-primary);
       }
     }
   }
