--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -6,8 +6,12 @@ $color-hover-background: #fafbfc;
 $color-white: #fff;
 $color-red: #eb5757;
 $color-green: #27ae60;
+
 $effect-duration: 0.3s;
-$tablet-min-width: 640px;
+
+$mobile-max-width: 639px;
+$tablet-max-width: 1199px;
 $desktop-min-width: 1200px;
 $container-max-width: 1136px;
+
 $mont: Mont, Arial, sans-serif;
