--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,19 @@ body > div:nth-child(1) {
   min-height: 100vh;
 }
 
-body.menu-show {
+.App {
+  width: 100%;
+  min-height: 100vh;
+
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+}
+
+body:has(div#root > div.App > header.header > nav.menu--open) {
   overflow: hidden;
 }
