--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,92 +4,100 @@
 .footer {
   box-shadow: 0 -1px 0 0 $color-elements;
   position: absolute;
-  width: 100%;
   bottom: 0;
+  width: 100%;
   font-family: $mont;
+
 
   &__content {
     display: flex;
-    flex-direction: column;
-    gap: 32px;
-    padding: 32px 0;
-    box-sizing: border-box;
+    justify-content: space-around;
+    align-items: center;
+    height: 96px;
 
-    .footer__logo {
-      background-image: url('../../../public/icons/logo.svg');
-      width: 89px;
-      height: 32px;
-      background-repeat: no-repeat;
-      margin-left: 16px;
+    @include on-mobile {
+      height: 257px;
+      flex-direction: column;
+      gap: 32px;
+      align-items: start;
     }
+  }
+
+  &__logo {
+    background-image: url('../../../public/icons/logo.svg');
+    width: 89px;
+    height: 32px;
+    background-repeat: no-repeat;
+    margin-left: 16px;
+
+    @include on-mobile {
+      margin-top: 32px;
+    }
+  }
+
+  &__nav {
+    display: flex;
+    padding-left: 16px;
+    text-transform: uppercase;
+    gap: 106px;
 
     @include on-tablet {
-      flex-direction: row;
-      justify-content: space-around;
-      align-items: center;
-      gap: 0;
-      height: 96px;
+      gap: 32px;
     }
 
-    .footer__nav {
-      display: flex;
+    @include on-mobile {
       flex-direction: column;
       gap: 16px;
-      padding-left: 16px;
-      text-transform: uppercase;
-
-      @include on-tablet {
-        flex-direction: row;
-        gap: 32px;
-      }
-
-      @include on-desktop {
-        gap: 106px;
-      }
     }
+  }
 
-    .footer__nav-link {
-      font-weight: bold;
-      text-decoration: none;
-      color: $color-secondary;
-      font-size: 12px;
+  &__nav-link {
+    font-weight: bold;
+    text-decoration: none;
+    color: $color-secondary;
+    font-size: 12px;
 
-      @include hover(color, $color-primary);
+    padding: 40px 0;
 
-      @include on-tablet {
-        padding: 40px 0;
-      }
+    @include hover(color, $color-primary);
+
+    @include on-mobile {
+      padding: 0;
     }
+  }
 
-    .footer__back-to-top {
-      display: flex;
-      align-items: center;
-      align-self: center;
-      gap: 16px;
-      font-size: 12px;
-      font-weight: 600;
-      line-height: normal;
-      color: $color-secondary;
+  &__back-to-top {
+    display: flex;
+    align-items: center;
+    align-self: center;
+    gap: 16px;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: normal;
+    color: $color-secondary;
 
-      .footer__back-to-top-link {
-        display: flex;
-        align-items: center;
-        gap: 16px;
-        color: inherit;
-        text-decoration: none;
-
-        @include hover(color, $color-primary);
-      }
-
-      .ico-up {
-        height: 32px;
-        width: 32px;
-        border: 1px solid $color-icons;
-        background-repeat: no-repeat;
-        background-position: center;
-
-        @include hover(border-color, $color-primary);
-      }
+    @include on-mobile {
+      margin-bottom: 32px;
     }
+  }
+
+  &__back-to-top-link {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    color: inherit;
+    text-decoration: none;
+
+    @include hover(color, $color-primary);
+  }
+
+  &__back-to-top-icon {
+    height: 32px;
+    width: 32px;
+    border: 1px solid $color-icons;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    @include hover(border-color, $color-primary);
   }
 }
