ProductCard and IconFavour fixes

--- a/src/components/IconFavour/IconFavour.scss
+++ b/src/components/IconFavour/IconFavour.scss
@@ -10,7 +10,7 @@
 
 
   &--added {
-    background-image: url('../../../public/icons/svg/fav-red.svg');
+    border: 1px solid $color-elements;
     }
 }
 
