--- a/src/styles/utils/_icons.scss
+++ b/src/styles/utils/_icons.scss
@@ -81,6 +81,10 @@
     &:hover {
       scale: 1.1;
     }
+
+    &-red {
+      background-image: url('../../../public/icons/svg/fav-red.svg');
+    }
   }
 
   &-cart {
