--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -6,6 +6,9 @@ $color-hover-background: #fafbfc;
 $color-white: #fff;
 $color-red: #eb5757;
 $color-green: #27ae60;
+$color-phones: #6d6474;
+$color-tablets: #8d8d92;
+$color-accessories: #973d5f;
 
 $effect-duration: 0.3s;
 
