error page solution

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,20 @@ body > div:nth-child(1) {
 
 main {
   flex-grow: 1;
+
+  @include content-padding-inline;
+  @include desktop-container;
+  padding-top: 56px;
+  padding-bottom: 80px;
+
+  @include on-tablet {
+    padding-top: 32px;
+    padding-bottom: 64px;
+  }
+
+  @include on-mobile {
+    padding-top: 24px;
+  }
 }
 
 body:has(div#root > div.App > header.header > nav.menu--open) {
