--- a/src/components/ShopByCategory/ShopByCategory.scss
+++ b/src/components/ShopByCategory/ShopByCategory.scss
@@ -15,31 +15,15 @@
   &__content {
     width: auto;
     margin: 0 auto;
-    padding: 0 152px;
-
-    @include on-tablet {
-      padding: 0 24px;
-    }
-
-    @include on-mobile {
-      padding: 0 16px;
-    }
   }
 
   &__title {
+    @include h2;
+
     width: 100%;
     max-width: 560px;
     height: 41px;
-    font-weight: 800;
-    font-size: 32px;
-    line-height: 41px;
-    letter-spacing: -1%;
-    color: $color-primary;
     text-align: left;
-
-    @include on-mobile {
-      font-size: 22px;
-    }
   }
 
   &__categories {
@@ -62,7 +46,6 @@
       align-items: flex-start;
       height: auto;
 
-
       @include on-tablet {
         height: auto;
       }
@@ -77,7 +60,6 @@
       &:hover .shop__category-title {
         text-decoration: underline;
       }
-
     }
 
     .shop__category:nth-child(1) .shop__category-img-box {
