--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -37,7 +37,7 @@
 }
 
 @mixin content-padding-inline {
-  padding-inline: 32px;
+  // padding-inline: 32px;
 
   @include on-tablet {
     padding-inline: 24px;
