--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -75,7 +75,7 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 21px;
-  color: $color-primary;
+  color: $color-secondary;
 }
 
 @mixin h1 {
