--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -67,7 +67,7 @@
   font-size: 12px;
   font-weight: 600;
   line-height: 15px;
-  color: $color-primary;
+  color: $color-secondary;
 }
 
 @mixin body-text {
