--- a/src/styles/utils/_icons.scss
+++ b/src/styles/utils/_icons.scss
@@ -58,13 +58,13 @@
     }
   }
 
-  &-close-dark {
+   &-close-dark {
     background-image: url('../../../public/icons/svg/close-dark.svg');
 
     &:hover {
       background-image: url('../../../public/icons/svg/close.svg');
     }
-  }
+
 
   &-menu {
     background-image: url('../../../public/icons/svg/menu-dark.svg');
@@ -95,5 +95,33 @@
     &:hover {
       scale: 1.1;
     }
+  }
+
+  &-minus {
+    border: 1px solid $color-elements;
+    background-image: url('../../../public/icons/svg/minus-dark.svg');
+
+     &:hover {
+      border-color: $color-primary;
+    }
+  }
+
+  &-disabled-minus {
+    cursor: default;
+    border: 1px solid $color-elements;
+    background-image: url('../../../public/icons/svg/minus.svg');
+    &:hover {
+      border-color: $color-elements;
+    }
+  }
+
+  &-plus {
+    border: 1px solid $color-elements;
+    background-image: url('../../../public/icons/svg/plus-dark.svg');
+
+    &:hover {
+      border-color: $color-primary;
+     }
+   }
   }
 }
