--- a/src/pages/EmptyCart/EmptyCart.scss
+++ b/src/pages/EmptyCart/EmptyCart.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  grid-column: 1/-1;
 
   &__message {
     text-align: center;
@@ -18,7 +19,6 @@
     margin-bottom: 20px;
 
     @include h4;
-
   }
 
   &__image-wrapper {
