--- a/src/pages/ProductsPage/DropDown/DropDown.scss
+++ b/src/pages/ProductsPage/DropDown/DropDown.scss
@@ -1,5 +1,5 @@
-@import '../../styles/utils/variables';
-@import '../../styles/utils/mixins';
+@import '../../../styles/utils/variables';
+@import '../../../styles/utils/mixins';
 
 .dropbutton {
   border: none;
