add functions for scrolling lists, implement useParams,add custom hooks

--- a/src/components/AddToCartButton/AddToCartButton.scss
+++ b/src/components/AddToCartButton/AddToCartButton.scss
@@ -1,6 +1,6 @@
 @import '../../styles/utils/variables';
 
-.button {
+.add-to-cart {
   display: flex;
   align-items: center;
   justify-content: center;
