--- a/src/components/AddToFavButton/AddToFavButton.scss
+++ b/src/components/AddToFavButton/AddToFavButton.scss
@@ -1,4 +1,5 @@
 @import '../../styles/utils/variables';
+@import '../../styles/utils/mixins';
 
 .iconFavour {
   height: 40px;
@@ -7,7 +8,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 
+  @include hover (border-color, $color-primary);
 
   &--added {
     border: 1px solid $color-elements;
