--- a/src/pages/ProductsPage/DropDown/DropDown.scss
+++ b/src/pages/ProductsPage/DropDown/DropDown.scss
@@ -30,14 +30,14 @@
     }
 
     &--active {
-      border: 1px solid #313237
+      border: 1px solid #313237;
     }
   }
 
   &__bottom {
     min-width: 100%;
     background-color: #fff;
-    position:absolute;
+    position: absolute;
     top: 44px;
     padding-block: 8px;
     display: flex;
@@ -45,13 +45,17 @@
     border: 1px solid #e2e6e9;
     box-shadow: 0px 2px 15px 0px #0000000d;
     opacity: 0;
+    display: none;
     transform: translateY(-5);
 
-    transition: opacity $effect-duration, transform $effect-duration;
+    transition:
+      opacity $effect-duration,
+      transform $effect-duration;
 
     &--active {
       opacity: 1;
       transform: translateY(0);
+      display: unset;
     }
   }
 
