--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -35,7 +35,6 @@
     gap: 16px;
     flex-wrap: nowrap;
     border: 1px solid $color-elements;
-    box-sizing: border-box;
 
     &:hover {
       box-shadow: 0 3px 13px 0 rgba(23, 32, 49, 0.26);
@@ -62,7 +61,7 @@
     background-color: $color-white;
 
     &:hover {
-      transform: scale(1.2);
+      transform: scale(1.1);
     }
   }
 
@@ -99,6 +98,7 @@
   }
 
   &__count-buttons {
+    // box-sizing: border-box;
     margin-right: 40px;
     width: 96px;
     height: 32px;
@@ -107,6 +107,7 @@
     align-items: center;
     gap: 14px;
 
+    // flex-basis: 180px;
     @include body-text;
   }
 
@@ -118,15 +119,18 @@
 
   &__price {
     @include h3;
+    // flex-basis: 150px;
+    // width: 150px;
   }
 
   &__total {
+    position: sticky;
+    top: 0;
     grid-column: 17/-1;
     width: 100%;
     height: max-content;
     padding: 24px;
     border: 1px solid $color-elements;
-    box-sizing: border-box;
 
     @include on-tablet {
       grid-column: 1/-1;
@@ -155,7 +159,7 @@
   &__checkout {
     display: flex;
     width: 100%;
-    height: 48px;
+    min-height: 48px;
     align-items: center;
     align-content: center;
     justify-content: center;
@@ -167,7 +171,6 @@
     color: $color-white;
     border: none;
     cursor: pointer;
-    box-sizing: border-box;
     transition: background-color $effect-duration;
 
     &:hover {
