--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -2,6 +2,18 @@
 @import '../../styles/utils/mixins';
 
 .homepage {
+  padding-top: 56px;
+  padding-bottom: 80px;
+
+  @include on-tablet {
+    padding-top: 32px;
+    padding-bottom: 64px;
+  }
+
+  @include on-mobile {
+    padding-top: 24px;
+  }
+
   &__title {
     @include h1;
 
