--- a/src/pages/ItemPage/ItemPage.scss
+++ b/src/pages/ItemPage/ItemPage.scss
@@ -2,6 +2,13 @@
 @import '../../styles/utils/variables';
 
 .itempage {
+  padding-top: 24px;
+  padding-bottom: 80px;
+
+  @include on-tablet {
+    padding-bottom: 64px;
+  }
+
   display: grid;
   justify-content: center;
   // display: flex;
