--- a/src/pages/ItemPage/ItemPage.scss
+++ b/src/pages/ItemPage/ItemPage.scss
@@ -9,10 +9,12 @@
     padding-bottom: 64px;
   }
 
+  &__bread-crumbs-wrapper {
+    grid-column: 1/-1;
+  }
+
   display: grid;
   justify-content: center;
-  // display: flex;
-  // flex-direction: column;
   gap: 16px;
   grid-template-columns: repeat(24, 1fr);
 
