--- a/src/pages/NotFoundPage/NotFoundPage.scss
+++ b/src/pages/NotFoundPage/NotFoundPage.scss
@@ -2,6 +2,8 @@
 @import '../../styles/utils/mixins';
 
 .pageNotFound {
+  overflow: hidden;
+
   &__wrapper {
     display: flex;
     justify-content: center;
@@ -18,7 +20,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
 
   width: max-content;
 
@@ -37,5 +38,6 @@
 
   &__img {
     object-fit: contain;
+    overflow: hidden;
   }
 }
