--- a/src/pages/ProductsPage/DropDown/DropDown.scss
+++ b/src/pages/ProductsPage/DropDown/DropDown.scss
@@ -45,8 +45,8 @@
     border: 1px solid #e2e6e9;
     box-shadow: 0px 2px 15px 0px #0000000d;
     opacity: 0;
-    display: none;
     transform: translateY(-5);
+    pointer-events: none;
 
     transition:
       opacity $effect-duration,
@@ -55,7 +55,7 @@
     &--active {
       opacity: 1;
       transform: translateY(0);
-      display: unset;
+      pointer-events: all;
     }
   }
 
